status dot added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/skeletal.css">
     <link rel="stylesheet" href="styles/hover.css">
     <link rel="stylesheet" href="styles/refreshAnimation.css">
+    <link rel="stylesheet" href="styles/statusDot.css">
     
     <title>Bharath Kumar</title>
 </head>
@@ -14,6 +15,7 @@
 
     <div class="main">
         <div class="center">
+            <span class="status-dot" data-tooltip="Looking for new opportunities"></span>
             <h1 onclick="toggleTheme()">Bharath Kumar Reddy M</h1>
             <div class="links">
 
