added mail icon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/hover.css">
     <link rel="stylesheet" href="styles/refreshAnimation.css">
     <link rel="stylesheet" href="styles/statusDot.css">
+    <link rel="stylesheet" href="styles/mailIcon.css">
     
     <title>Bharath Kumar</title>
 </head>
@@ -16,15 +17,15 @@
     <div class="main">
         <div class="center">
             <span class="status-dot" data-tooltip="Looking for new opportunities"></span>
-            <h1 onclick="toggleTheme()">Bharath Kumar Reddy M</h1>
+            <h1 onclick="toggleTheme()">Bharath Kumar Reddy</h1>
             <div class="links">
 
                 <a href="https://github.com/bharathkumaarr" target="_blank">github/@bharathkumaarr</a>
                 <a href="https://linkedin.com/in/bkrm" target="_blank">linkedin/@bkrm</a>
                 <a href="https://x.com/bharathkumxr" target="_blank">x/@bharathkumxr</a>
                 <h4>Resume</h3>
-
             </div>
+            <a href="mailto:reddybharathkumar.m@gmail.com" class="mail-icon"></a>
         </div>
 
 
