--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                 <a href="https://github.com/bharathkumaarr" target="_blank">github/@bharathkumaarr</a>
                 <a href="https://linkedin.com/in/bkrm" target="_blank">linkedin/@bkrm</a>
                 <a href="https://x.com/bharathkumxr" target="_blank">x/@bharathkumxr</a>
-                <h4>Resume</h3>
             </div>
+            <!-- <h4>Projects</h4> -->
+            <h4>Resume</h4>
             <a href="mailto:reddybharathkumar.m@gmail.com" class="mail-icon"></a>
         </div>
 
