--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="https://x.com/bharathkumxr" target="_blank">x/@bharathkumxr</a>
             </div>
             <!-- <h4>Projects</h4> -->
-            <h4>Resume</h4>
+            <a href="https://drive.google.com/file/d/1XJicIVsVGHOnotBzSDIbN8Lla-43vVH-/view?usp=sharing" target="_blank"><h4>Resume</h4></a>
             <a href="mailto:reddybharathkumar.m@gmail.com" class="mail-icon"></a>
         </div>
 
