--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="https://x.com/bharathkumxr" target="_blank">x/@bharathkumxr</a>
             </div>
             <a href="projects.html"><h4>Projects</h4></a>
-            <a href="https://drive.google.com/file/d/1q5Us_OIy-gudleI_vMF4QE6YXQC9vb44/view?usp=sharing" target="_blank"><h4>Resume</h4></a>
+            <!-- <a href="https://drive.google.com/file/d/1q5Us_OIy-gudleI_vMF4QE6YXQC9vb44/view?usp=sharing" target="_blank"><h4>Resume</h4></a> -->
             <a href="mailto:reddybharathkumar.m@gmail.com" class="mail-icon"></a>
         </div>
 
