--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,24 @@
             <div class="projects-list">
                 <div class="project-item">
                     <div class="project-icon">
+                        <div class="icon-placeholder brieflyai-icon">🗒️</div>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-name">BrieflyAI <span class="external-link">↗</span></h3>
+                        <p class="project-description">AI meeting notes summarizer.</p>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-icon">
+                        <div class="icon-placeholder LinkedIn-Search-Tool-icon">🔍</div>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-name">LinkedIn-Search-Tool <span class="external-link">↗</span></h3>
+                        <p class="project-description">Find the freshest LinkedIn jobs by keyword and posting time tailored to your search.</p>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-icon">
                         <div class="icon-placeholder texty-icon">💬</div>
                     </div>
                     <div class="project-content">
